[tool.poetry]
name = "async-workers-poc"
version = "0.1.0"
description = "Workers for jobs saved on a db, using Python's asyncio"
authors = ["Juan Carlos Aguilera Núñez <jcaguile@uc.cl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "async_workers_poc"}]

[tool.poetry.dependencies]
python = "^3.9"
aiomysql = "^0.1.1"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = "^0.85.0"

[tool.poetry.scripts]
app = "examples.asgi_app:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
